# rust-efivar-browser

./: README.md
efivar-browser/: Cargo.toml
efivar-browser/src/: main.rs
