[package]
name = "efivar-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
efivar = "1.0.5"
cursive = {version = "0.19", default-features = false }

[features]
default = ["cursive/crossterm-backend"]

